add basic files fro authentication

--- a/Presentation/ApiGateway/ApiGateway.csproj
+++ b/Presentation/ApiGateway/ApiGateway.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Infrastructure\JwtIdentity\JwtIdentity.csproj" />
     <ProjectReference Include="..\..\Infrastructure\SqlServerOrm\SqlServerOrm.csproj" />
   </ItemGroup>
 
