--- a/Presentation/ApiGateway/appsettings.Development.json
+++ b/Presentation/ApiGateway/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Default": "Server=.;Database=PasswordKeeperDb;TrustServerCertificate=True;Trusted_Connection=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
