--- a/Presentation/ApiGateway/appsettings.Development.json
+++ b/Presentation/ApiGateway/appsettings.Development.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "Default": "Server=.;Database=PasswordKeeperDb;TrustServerCertificate=True;Trusted_Connection=True"
   },
+  "Identity": {
+    "Token": "0000000000000000"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
