--- a/Core/Application/Application.csproj
+++ b/Core/Application/Application.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="UserArea\Query\" />
+    <Folder Include="ActorArea\Query\" />
   </ItemGroup>
 
 </Project>
