--- a/Presentation/ApiGateway/appsettings.Development.json
+++ b/Presentation/ApiGateway/appsettings.Development.json
@@ -5,6 +5,9 @@
   "Identity": {
     "Token": "0000000000000000"
   },
+  "AesEncryptor": {
+    "Key": "00000000000000000000000000000000"
+  } , 
   "Logging": {
     "LogLevel": {
       "Default": "Information",
